[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/imagenes/background.png" type="Texture" id=1]
[ext_resource path="res://entities/player/PlayerKinematic.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://assets/imagenes/floor.png" type="Texture" id=4]
[ext_resource path="res://entities/enemy/Enemy.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 511.607, 34.7339 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32.9186, 32.8642 )

[node name="Main" type="Node"]
script = ExtResource( 3 )

[node name="BackGround" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.00569
margin_top = 0.493347
margin_right = 802.006
margin_bottom = 600.493
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( 405.312, 573.491 )
collision_layer = 2147483649
__meta__ = {
"_edit_group_": true
}

[node name="Floor" type="Sprite" parent="Floor"]
show_behind_parent = true
scale = Vector2( 15.5299, 1.07447 )
texture = ExtResource( 4 )

[node name="Collisio" type="CollisionShape2D" parent="Floor"]
shape = SubResource( 1 )

[node name="Floor2" type="StaticBody2D" parent="."]
position = Vector2( -323, -217.99 )
collision_layer = 2147483649
__meta__ = {
"_edit_group_": true
}

[node name="Floor2" type="Sprite" parent="Floor2"]
show_behind_parent = true
position = Vector2( 271.847, 458.754 )
scale = Vector2( 4, 1 )
texture = ExtResource( 4 )

[node name="Collision2" type="CollisionShape2D" parent="Floor2"]
show_behind_parent = true
position = Vector2( 271.847, 458.754 )
scale = Vector2( 4, 1 )
shape = SubResource( 2 )

[node name="PlayerKinematic" parent="." instance=ExtResource( 2 )]

[node name="Enemy" parent="." instance=ExtResource( 5 )]
position = Vector2( 644.55, 287.788 )

[node name="Enemy2" parent="." instance=ExtResource( 5 )]
position = Vector2( 644.55, 287.788 )

[node name="Enemy3" parent="." instance=ExtResource( 5 )]
position = Vector2( 644.55, 287.788 )
